--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -1,42 +1,50 @@
-.login-form__content {
+.form__content {
     margin: 0 auto;
     padding: 30px 15px;
-    max-width: 1230px;
-}
-
-.login-form__heading {
-    margin-bottom: 20px;
-    text-align: center;
+    background-color: #f6f4f4;
 }
 
 .form {
     margin: 0 auto;
     width: 50%;
     text-align: center;
+    padding: 40px 12px;
+    border: 1px solid #d5d4d4;
+    border-radius: 4px;
+    background-color: #fff;
 }
 
 .form__group {
     margin-bottom: 5px;
-}
-
-.form__group-title {
+    padding: 10px 0;
+    width: 70%;
     text-align: left;
+    margin: 0 auto;
 }
 
-.form__error {
-    height: 20px;
-    color: #ff0000;
-    text-align: left;
+.form__group-title,
+.form__group-content {
+    width: 100%;
+    padding: 5px 0;
 }
 
-.form__input--text input {
+.form__group-title span {
+    font-weight: bold;
+}
+
+.form__group-content input {
     padding: 10px;
     width: 100%;
-    height: 40px;
-    border: 1px solid #ddd;
+    height: 15px;
+    border: 1px solid #f6f4f4;
     border-radius: 3px;
-
     appearance: none;
+    background-color: #f6f4f4;
+}
+
+input::placeholder {
+    color: #afafaf;
+    font-size: 10px;
 }
 
 .form__button {
@@ -44,12 +52,10 @@
 }
 
 .form__button-submit {
-    padding: 10px;
-    width: 30%;
-    height: 50px;
+    padding: 8px 35px;
     border: none;
-    border-radius: 3px;
-    background: #000;
+    border-radius: 2px;
+    background: #887a6b;
     color: #fff;
     cursor: pointer;
 }
