--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,21 +1,53 @@
+body {
+    font-family: "faustina", sans-serif;
+    color: #887a6b;
+}
+
 .header {
+    height: 80px;
     background: #fff;
-    margin: 0;
-    width: 100%;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .header__inner {
-    padding: 10px 15px;
-    text-align: center;
-    width: 100%;
+    position: relative;
+    /* margin: 0 auto;
+    padding: 25px 15px; */
+    height: 100%;
 }
 
-.header__title {
-    margin: 0;
-    color: #887a6b;
-    font-weight: bold;
-    font-family: "faustina", sans-serif;
-    font-size: 32px;
-    border-bottom: 1px solid #edeceb;
-    box-sizing: border-box;
+.header__logo {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.header__logo-link {
+    text-decoration: none;
+    color: inherit;
+    font-size: 30px;
+    letter-spacing: 1px;
+}
+
+.header__right {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.header__link {
+    text-decoration: none;
+    padding: 2px 20px;
+    border: 1px solid #d5d4d4;
+    border-radius: 2px;
+    background-color: #f6f4f4;
+    color: #afafaf;
+}
+
+/* body共通 */
+.form__heading {
+    margin-bottom: 40px;
+    text-align: center;
 }
