--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -1,43 +1,44 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 .form__content {
-    margin: 0 auto;
-    padding: 30px 15px;
     background-color: #f6f4f4;
+    height: 100vh;
+    padding: 30px 15px;
 }
 
 .form {
     margin: 0 auto;
     width: 50%;
     text-align: center;
-    padding: 40px 12px;
+    padding: 40px 0;
     border: 1px solid #d5d4d4;
     border-radius: 4px;
     background-color: #fff;
 }
 
 .form__group {
-    margin-bottom: 5px;
     padding: 10px 0;
-    width: 70%;
+    width: 60%;
     text-align: left;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
-.form__group-title,
-.form__group-content {
+.form__group-title {
     width: 100%;
-    padding: 5px 0;
-}
-
-.form__group-title span {
+    padding: 10px 0;
     font-weight: bold;
 }
 
 .form__group-content input {
-    padding: 10px;
+    padding: 20px;
+    margin-top: 10px;
     width: 100%;
     height: 15px;
-    border: 1px solid #f6f4f4;
-    border-radius: 3px;
+    border: none;
     appearance: none;
     background-color: #f6f4f4;
 }
@@ -47,15 +48,23 @@ input::placeholder {
     font-size: 10px;
 }
 
+.form__error {
+    color: #ff0000;
+}
+
 .form__button {
-    margin-top: 20px;
+    margin: 30px 0;
 }
 
 .form__button-submit {
     padding: 8px 35px;
     border: none;
-    border-radius: 2px;
     background: #887a6b;
     color: #fff;
     cursor: pointer;
+}
+
+/* loginのみ */
+.form__btn-login {
+    margin-top: 20px;
 }
