--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,4 +1,8 @@
-body {
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     font-family: "faustina", sans-serif;
     color: #887a6b;
 }
@@ -11,8 +15,6 @@ body {
 
 .header__inner {
     position: relative;
-    /* margin: 0 auto;
-    padding: 25px 15px; */
     height: 100%;
 }
 
@@ -47,6 +49,10 @@ body {
 }
 
 /* body共通 */
+.form__content {
+    margin: 0 auto;
+}
+
 .form__heading {
     margin-bottom: 40px;
     text-align: center;
