--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -6,7 +6,7 @@
 
 .form__content {
     background-color: #f6f4f4;
-    height: 100vh;
+    height: 100%;
     padding: 30px 15px;
 }
 
@@ -50,6 +50,7 @@ input::placeholder {
 
 .form__error {
     color: #ff0000;
+    margin: 0;
 }
 
 .form__button {
