--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,9 +1,17 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: "faustina", sans-serif;
+    font-family: "Andada Pro", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     color: #887a6b;
 }
 
@@ -41,19 +49,22 @@ html, body {
 
 .header__link {
     text-decoration: none;
-    padding: 2px 20px;
+    padding: 4px 20px;
     border: 1px solid #d5d4d4;
-    border-radius: 2px;
     background-color: #f6f4f4;
     color: #afafaf;
 }
 
-/* body共通 */
+/* main共通 */
 .form__content {
     margin: 0 auto;
 }
 
 .form__heading {
-    margin-bottom: 40px;
     text-align: center;
+}
+
+.form__title {
+    font-size: 26px;
+    font-weight: 400;
 }
