--- a/src/public/css/contact.css
+++ b/src/public/css/contact.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 /* 共通 */
 .contact-form {
     margin: 0 auto;
@@ -11,7 +17,7 @@
 }
 
 .form__btn {
-    margin-top: 30px;
+    margin: 30px;
     text-align: center;
 }
 
