chore: enhance .gitignore with build and environment files

--- a/src/public/css/contact.css
+++ b/src/public/css/contact.css
@@ -105,6 +105,10 @@
     border: none;
 }
 
+.form__select option {
+    color: #887a6b;
+}
+
 .form__input textarea {
     padding: 5px;
     height: 200px;
